--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite App</title>
+    <title>Netflix Clone</title>
   </head>
   <body>
     <div id="root"></div>
